# quadints

./: .gitignore  CMakeLists.txt  LICENSE  TODO.md
examples/: segment.cpp
include/: interface.hpp  quads_product.hpp  quads_segment.hpp  quads_triangle.hpp  segment_quads.hpp  splitter_triangle.hpp  triangle_quads.hpp
test/: product.cpp  segment_1d.cpp  split_triangle.cpp  test_utility.hpp  triangle_2d.cpp
